--- a/design/scss/hedi-scss/carbon-overwrite.scss
+++ b/design/scss/hedi-scss/carbon-overwrite.scss
@@ -10,7 +10,22 @@
 .bx--row {
   @media (max-width: 769px) {
     // HACK
-      max-width: 100vw;
+    max-width: 100vw;
     // max-width: 100%;
   }
+}
+
+.bx--tag {
+  font-size: 0.75rem;
+  line-height: 1.5;
+  margin: 0.25rem 0.5rem;
+  padding: 0.25rem 0.75rem;
+}
+
+.bx--tag--blue {
+  color: $blue-90;
+}
+
+.bx--toast-notification__title {
+  font-weight: 500;
 }
